@@ -6,6 +6,7 @@
         img {
             -webkit-filter: none;
             filter: none;
+			vertical-align: middle;
         }
         &:hover {
             img {
@@ -42,16 +43,11 @@
         text-align: center;
     }
     .pp-feed-item {
+        position: relative;
+    }
+    .pp-feed-item-inner {
         display: block;
         position: relative;
-        &:before {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            z-index: 1;
-            content: "";
-            @include transition(all);
-        }
     }
     &-gray .pp-feed-item img {
         -webkit-filter: grayscale(100%);
@@ -68,20 +64,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: 0;
         z-index: 1;
         span {
+			display: -ms-flexbox;
+			display: flex;
+			-ms-flex-align: center;
+			align-items: center;
             margin: 0 5px;
         }
     }
     &-hover {
         .pp-overlay-container {
             opacity: 0;
-            @include transition($target: all, $time: 0.25s, $timing-function: linear);
         }
         .pp-feed-item:hover {
             .pp-overlay-container {
@@ -99,10 +93,34 @@
 }
 .pp-instafeed {
     overflow: hidden;
+	position: relative;
+}
+.pp-if-icon {
+	margin-right: 5px;
+}
+.pp-if-square-images {
+	.pp-feed-item-inner {
+		position: relative;
+		padding-bottom: 100%;
+		width: 100%;
+	}
+	.pp-if-img {
+    	overflow: hidden;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+	}
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
 .pp-load-more-button {
     cursor: pointer;
-    &:disabled {
+    &[disabled='disabled'] {
         display: none;
     }
 }
